src/it/resources/regression/verification/invalid/BVDivision2.scala
/* Copyright 2009-2016 EPFL, Lausanne */

import stainless.lang._
import stainless.collection._
import stainless._

object BVDivision2 {

  def division(x: Int, y: Int): Int = {
    x / y
  }
  
}
